--- a/pages/07_计算属性/03_姓名案例_计算属性实现.html
+++ b/pages/07_计算属性/03_姓名案例_计算属性实现.html
@@ -32,8 +32,9 @@
         computed:{
             fullName:{
                 // get有什么作用？ 当有人读取fullName时，get就会被调用，且返回值作为fullName的值
+                // get 初次读取fullName时被调用
+                // 所依赖的数据发生拜年话时被调用
                 get(){
-                    alert("The get function was be runned!")
                     return this.name.firstName + this.name.secondName;
                 }
             }
