--- a/pages/07_计算属性/03_姓名案例_计算属性实现.html
+++ b/pages/07_计算属性/03_姓名案例_计算属性实现.html
@@ -8,6 +8,9 @@
     <!-- 引入Vue -->
     <script type="text/javascript" src="../../js/vue.js"></script>
 </head>
+<!-- 
+    计算属性无需在data中定义，可以直接通过表达式使用
+ -->
 <body>
     <div id="root">
         姓：<input type="text" v-model="name.firstName" > <br>
